--- a/style/3-1-1produst.css
+++ b/style/3-1-1produst.css
@@ -44,7 +44,7 @@ h3{
 .section2 a .wood{
     width: 45px;
     height: 150px;
-    background-image: url(../img/02shop/wood01@2x.png);
+    background-image: url(../img/02shop/wood01.png);
     background-repeat: no-repeat;
     margin-bottom: 30px;
 
