--- a/style/3-1produst.css
+++ b/style/3-1produst.css
@@ -123,6 +123,8 @@ text-align: center;
     font-size: 16px;
     letter-spacing: 1px;
     padding-left: 165px;
+    -webkit-appearance: none;
+    appearance: none;
     
 }
 .s-right .inputbox{
