--- a/style/outpatient.css
+++ b/style/outpatient.css
@@ -8,7 +8,8 @@ body{
 
 }
 .wrapper{
-    width: 1200px;
+    width: 100%;
+    min-width: 1160px;
     margin: 0 auto;
 }
 h1{
@@ -22,35 +23,37 @@ h2{
 
 .container{
     width: 100%;
-    height: 600px;
-    /* position: relative; */
+    height: 100%;
 }
+.container .img-block img{
+    display: block;
+    width: 100%;
+}
+
 
 /* ------section2 block----- */
 .section2{
-    position: relative;
+    background-image: url(../img/04outpatient/poc05.jpg);
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 .section2 .cover{
-    position: absolute;
     width: 100%;
-    height: 313.51px;
-    background-color: rgba(93,93,93,.4);
-    top: 0;
-   
+    margin: 0 auto;
+    text-align: center;
+    color: rgb(230, 230, 230);
+    padding: 100px 0;
 }
 .section2 img{
     width: 100%;
     display: block;
 }
-.section2 span{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgb(233, 233, 233);
-    text-align: center;
-}
-.section2 span h1{
+
+.section2 .cover h1{
    margin-bottom: 10px;
 }
 
