--- a/style/storeroom copy.css
+++ b/style/storeroom copy.css
@@ -11,7 +11,8 @@ body{
 
 }
 .wrapper{
-    width: 1200px;
+    width: 100%;
+    min-width: 980px;
     margin: 0 auto;
 }
 h1{
@@ -63,6 +64,7 @@ h3{
 /* ------s-right----- */
 
 .section2 .s-right{
+    margin: 0 auto;
     background-color: #E2CFA9;
     border: 2px solid #8D9A7B;
     /* border:1px solid red; */
