--- a/style/story.css
+++ b/style/story.css
@@ -8,7 +8,8 @@ body{
 
 }
 .wrapper{
-    width: 1200px;
+    width: 100%;
+    min-width: 1160px;
     margin: 0 auto;
 }
 h1{
@@ -21,87 +22,36 @@ h2{
 /* ------section1 block----- */
 .container{
     width: 100%;
-    height: 600px;
-    position: relative;
+    height: 100%;
 }
 .container img{
+    display: block;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 1;
 }
-.container div {   
-    /* animation: round 11s linear infinite; */
-    opacity: 1;
-}
-
-/* @keyframes round {
-    4% {
-        opacity: 1;
-        filter: alpha(opacity=100);
-        
-    }
-    20% {
-        opacity: 1;
-        filter: alpha(opacity=100);
-        
-    }
-    24% {
-        opacity: 0;
-        filter: alpha(opacity=0);
-        
-    }
-} */
-/* .container div:nth-child(2) {
-    -webkit-animation-delay: 0s;
-            animation-delay: 0s;
-} */
-
-/* @keyframes round {
-    9.1% {
-        opacity: 1;
-    }
-    45.5% {
-        opacity: 1;
-    }
-    54.6% {
-        opacity: 0;
-    }
-}
-.container div:nth-child(2) {
-    animation-delay: 0s;
-}
-
-.container div:nth-child(1) {
-    animation-delay: 5s;
-} */
 
 /* ------section2 block----- */
 .section2{
-    position: relative;
+    background-image: url(../img/01story/pic02.jpg);
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 .section2 .cover{
-    position: absolute;
     width: 100%;
-    height: 313.51px;
-    background-color: rgba(93,93,93,.4);
-    top: 0;
-   
+    margin: 0 auto;
+    text-align: center;
+    color: rgb(230, 230, 230);
+    padding: 100px 0;
 }
 .section2 img{
     width: 100%;
     display: block;
 }
-.section2 span{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgb(233, 233, 233);
-    text-align: center;
-}
-.section2 span h1{
+
+.section2 .cover h1{
    margin-bottom: 10px;
 }
 /* ------section3 block----- */
