--- a/style/3-1produst.css
+++ b/style/3-1produst.css
@@ -254,3 +254,43 @@ text-align: center;
 .maylike li img:hover{
     outline: 2.5px solid  #6B7F5A;
 }
+
+
+
+/* tab-block */
+
+.section3 .container{
+    /* width: 800px; */
+    margin: 0 auto;
+  }
+
+.section3  ul.tabs{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    text-align: center;
+    background-color: #E2CFA9
+  }
+.section3  ul.tabs li{
+    background: none;
+    color: #222;
+    display: inline-block;
+    padding: 10px 15px;
+    cursor: pointer;
+  }
+
+.section3 ul.tabs li.current{
+    /* background: #ededed; */
+    color: #6B7F5A;
+    background-color:  #F6F0E3;
+  }
+
+.section3  .tab-content{
+    display: none;
+    /* background: #ededed; */
+    padding: 15px;
+  }
+
+.section3  .tab-content.current{
+    display: inherit;
+  }
