--- a/style/3-1produst.css
+++ b/style/3-1produst.css
@@ -291,11 +291,16 @@ text-align: center;
     padding: 15px;
   }
 
-.section3  .tab-content.current{
+.section3  .tab-content .current{
     display: inherit;
     text-align: center;
     padding: 65px 0;
   }
   .tab-content.current p{
       padding-bottom: 20px;
+  }
+  .section3  .tab-content {
+    display: inherit;
+    text-align: center;
+    padding: 65px 0;
   }
