--- a/style/web-commed.css
+++ b/style/web-commed.css
@@ -1,5 +1,7 @@
 @import url('../style/reset.css');
 
+*{outline: 1px solid red;}
+
 /* ...... 共用 nav bar ....... */
 .nav{
     background-color: #E2CFA9;
@@ -8,7 +10,8 @@
 
 }
 .nav .logo1{
-    width: 80px;
+    max-width: 80px;
+    width: 100%;
     
 }
 .nav ul.menu{
@@ -74,6 +77,15 @@
     width: 22px;
 }
 
+@media screen and (max-width:575px ){
+    .nav .logo1{
+        max-width: 60px;
+        width: 100%;
+        
+    }
+}
+
+
 /* 下拉選單 */
 
 .nav li.select{
@@ -119,9 +131,11 @@ ul.shop-list{
     box-sizing: border-box;
 }
 .footer .box-left img{
-    height: 150px;
+    height: 100%;
+    max-height: 150px;
 }
 .footer .box-center{
+    min-width: 300px;
     text-align: center;
     padding: 30px;
     box-sizing: border-box;
@@ -135,4 +149,26 @@ ul.shop-list{
 }
 .box-right-block a .line{
     transform: translateY(2px);
+}
+@media screen and (max-width:575px ){
+    .footer .box-left img{
+        height: 100%;
+        max-height: 100px;
+    }
+    .footer{
+        
+        flex-direction: column;
+        padding: 50px 70px;
+        justify-content: space-around;
+        align-items: center;
+        box-sizing: border-box;
+    }
+}
+@media screen and (min-width:714px )and (max-width: 828px){
+    .box-right .box-right-block{
+        width: 131px;
+    }
+    .footer{
+        padding: 50px 50px;
+    }
 }
