--- a/style/shop.css
+++ b/style/shop.css
@@ -22,7 +22,7 @@ h2{
 
 /* ------section2 block----- */
 .section2{
-  margin:0 auto ;
+  
   background-color: #8D9A7B;
   width: 100%;
   min-width: 1080px;
@@ -30,6 +30,7 @@ h2{
   padding-bottom: 10px;
   line-height: 1.4;
   display: flex;
+  justify-content: center;
 
   
   /* justify-content: space-between; */
@@ -43,7 +44,7 @@ h2{
     justify-content: space-between;
     flex-wrap: wrap;
     padding-top: 20px;
-    margin: 0 45px 0 45px;
+    margin-right: 45px;
 }
 .section2 .woodboard a{
     text-decoration: none;
