--- a/style/shop.css
+++ b/style/shop.css
@@ -1,5 +1,9 @@
 @import url('../style/reset.css;');
 
+*{
+    outline: 1px solid pink;
+}
+
 body{
     width: 100%;
 	line-height: 1.6;
@@ -9,7 +13,7 @@ body{
 }
 .wrapper{
     width: 100%;
-    min-width: 1080px;
+    /* min-width: 1080px; */
     margin: 0 auto;
 }
 h1{
@@ -22,7 +26,7 @@ h2{
 
 /* ------section2 block----- */
 .section2{
-  
+  outline: 1px solid red;
   background-color: #8D9A7B;
   width: 100%;
   min-width: 1080px;
@@ -31,20 +35,17 @@ h2{
   line-height: 1.4;
   display: flex;
   justify-content: center;
-
-  
-  /* justify-content: space-between; */
-  /* border: 1px solid red; */
 }
 .section2 .woodboard{
     height: 550px;
     width: 210px;
-    min-width: 145px;
+    /* min-width: 145px; */
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     padding-top: 20px;
     margin-right: 45px;
+    outline: 1px solid blue;
 }
 .section2 .woodboard a{
     text-decoration: none;
@@ -65,29 +66,28 @@ h2{
     text-align: center;
     padding-top: 35px;
 }
+
+/* ------product board block----- */
+
 .productboard{
     /* width: 800px; */
     background-color: #F6F0E3;
     margin: 30px 0 10px;
     padding: 60px 40px 0px;
-    /* position: relative; */
-    /* border: 1px solid red; */
+    outline: 1px solid yellow;
 }
 .productboard .search{
     outline: 0;
     margin: 0 20px 30px 5px;
-    
 }
 .productboard .top{
     display: flex;
     justify-content: flex-end;
-    
 }
 .productboard .top img{
     width: 20px;
     height: 21px;
 }
-
 .productboard .select{
     width: 130px;
     height: 22px;
@@ -104,10 +104,10 @@ h2{
 .productboard .out a{
     text-decoration: none;
     color: #000;
+    margin-bottom: 30px;
 }
 .productboard .out .product{
     text-align: center;
-    margin-bottom: 30px;
 }
 .productboard .out .product:hover{
     background-color: #B1B9A3;
@@ -118,13 +118,18 @@ h2{
 }
 
 .out .product h2{
-   margin-bottom: 10px;
+   margin-bottom: 5px;
+}
+.out .product p{
+    margin-bottom: 5px;
 }
 .section2 .number{
     display: block;
     text-align: center;
     margin-top: 20px;
 }
+
+/* ------section3 block----- */
 
 .section3{
     background-color: #8D9A7B;
