--- a/style/style.css
+++ b/style/style.css
@@ -113,6 +113,8 @@ h2{
 
 .product-list img{
     width: 220px;
+    display: block;
+    /* width: 100%; */
 }
 .section3 .product-list a{
     display: block;
@@ -120,6 +122,7 @@ h2{
     text-align: center;
     text-decoration: none;
     margin: 30px auto 100px;
+    height: 100%;
     
 }
 .section3 .product-list a:hover{
