--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 @import url('../style/reset.css');
 
-/* * {
-    outline: 1px solid red;} */
+* { outline: 1px solid red;} 
 
 body{
     width: 100%;
@@ -45,7 +44,17 @@ h2{
 /* ...... section2 ....... */
 .section2{
     background-color: #E2CFA9;
+    overflow: hidden;
+}
+.section2 .slick-dots{
+    background-color: #E2CFA9;
+    position: relative;
+    bottom: 0;
+    padding-bottom: 15px;
     
+}
+.slick-dotted.slick-slider {
+    margin-bottom: 0;
 }
 .section2 .main-pic{
     width: 100%;
@@ -89,20 +98,21 @@ h2{
     letter-spacing: 2px;
 }
 .section3 ul.product-list{
-    width: 120%;
+    /* width: 120%;
     height: 400px;
     display: flex;
     transform: translate(-8%);
-    margin-bottom: 20px;  
-    /* overflow: hidden; */
-    justify-content: center;
-    padding-bottom: 20px;
+    margin-bottom: 20px;  */
+    justify-content: space-between;
+    padding-bottom: 20px; 
+    display: flex;
 }
 
 .section3 .product-list li{
     flex-grow: 1;
-    flex-shrink: 0;
+    flex-shrink: 1;
     margin: 10px;
+    width: 220px;
 }
 .section3 .product-list span{
     font-size: 20px;
@@ -114,19 +124,13 @@ h2{
 .product-list img{
     width: 220px;
     display: block;
-    /* width: 100%; */
 }
 .section3 .product-list a{
-    display: block;
     color: #000;
     text-align: center;
     text-decoration: none;
-    margin: 30px auto 100px;
-    height: 100%;
-    
 }
 .section3 .product-list a:hover{
-    /* flex-grow: 2; */
     animation: img .6s ease forwards;
 }
 @keyframes img{
@@ -153,6 +157,21 @@ h2{
 }
 .section3 .btn:hover{
     background-color: #E2CFA9;
+}
+
+.slick-slide .slick-cloned{
+    width: 220px;
+}
+..slick-slide{
+    width: 220px;
+}
+
+.section3 .slick-dots{
+    background-color: #E2CFA9;
+    position: relative;
+    bottom: 0;
+    padding-bottom: 15px;
+    
 }
 /* ...... section4 ....... */
 .section4{
