--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 @import url('../style/reset.css');
 
-* { outline: 1px solid red;} 
+/* * { outline: 1px solid red;}  */
 
 body{
     width: 100%;
@@ -51,7 +51,9 @@ h2{
     position: relative;
     bottom: 0;
     padding-bottom: 15px;
-    
+}
+.slick-block{
+    cursor: pointer;
 }
 .slick-dotted.slick-slider {
     margin-bottom: 0;
@@ -103,17 +105,18 @@ h2{
     display: flex;
     transform: translate(-8%);
     margin-bottom: 20px;  */
-    justify-content: space-between;
-    padding-bottom: 20px; 
-    display: flex;
+    /* justify-content: space-between; */
+    /* padding-bottom: 20px;  */
+    /* display: flex;
+    flex-wrap: wrap; */
 }
 
-.section3 .product-list li{
+/* .section3 .product-list li{
     flex-grow: 1;
     flex-shrink: 1;
     margin: 10px;
     width: 220px;
-}
+} */
 .section3 .product-list span{
     font-size: 20px;
 }
@@ -122,25 +125,34 @@ h2{
 }
 
 .product-list img{
-    width: 220px;
+    max-width: 220px;
+    width: 100%;
     display: block;
+    margin-bottom: 10px;
 }
-.section3 .product-list a{
+ .section3 .product-list a {
     color: #000;
     text-align: center;
     text-decoration: none;
+    padding:20px 0;
+}  
+
+.section3 .product-list a li{
+    transition: .3s ease;
 }
-.section3 .product-list a:hover{
-    animation: img .6s ease forwards;
-}
-@keyframes img{
+ .section3 .product-list a:hover li{
+    transform: scale(1.05) translateY(0);
+    transition: .6s ease;
+    /* animation: img .6s ease forwards; */
+} 
+/* @keyframes img{
     0%{
         transform: scale(1) translateY(0);
     }
     100%{
         transform: scale(1.05)translateY(-20px);
     }
-}
+} */
 
 .section3 .btn{
     text-decoration: none;
@@ -155,24 +167,10 @@ h2{
     font-size: 20px;
    
 }
-.section3 .btn:hover{
+ .section3 .btn:hover{
     background-color: #E2CFA9;
 }
 
-.slick-slide .slick-cloned{
-    width: 220px;
-}
-..slick-slide{
-    width: 220px;
-}
-
-.section3 .slick-dots{
-    background-color: #E2CFA9;
-    position: relative;
-    bottom: 0;
-    padding-bottom: 15px;
-    
-}
 /* ...... section4 ....... */
 .section4{
     /* position: relative; */
@@ -520,4 +518,51 @@ section {
   }
   
   
-  
+  /* ======= swiper ======= */
+  .section3 .swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .section3 .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+   
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-pagination {
+    position: relative;
+    padding-bottom: 10px;
+  }
+
+  .swiper-container-horizontal > .swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 8px;
+}
+.swiper-pagination-bullet-active {
+    opacity: 1;
+    /* background: var(--swiper-pagination-color,var(--swiper-theme-color)); */
+}
+.swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    background: #353535;
+}
