section4  bg-cover

--- a/style/style.css
+++ b/style/style.css
@@ -247,7 +247,14 @@ h2{
     .t-margin{
         margin: 0;
     }
-  
+    .section4{
+      
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: cover;
+       
+       
+    }
 }
 
 @media (min-width:576px) and (max-width: 1160px){
@@ -313,8 +320,8 @@ h2{
     }
      .mid .mid-right{
         padding: 10px;
-      
      }
+
 }
 @media  (min-width:576px) and (max-width: 1160px){
     .mid .mid-right{
