--- a/style/style.css
+++ b/style/style.css
@@ -248,7 +248,8 @@ h2{
         margin: 0;
     }
     .section4{
-        background-attachment: cover;
+        /* background-attachment: cover; */
+        background-size: cover;
     }
    
 }
