--- a/style/style.css
+++ b/style/style.css
@@ -524,7 +524,8 @@ section {
   }
   
   
-  /* ======= swiper ======= */
+  /* =========== swiper =========== */
+  
   .section3 .swiper-container {
     width: 100%;
     height: 100%;
