--- a/style/story.css
+++ b/style/story.css
@@ -25,11 +25,13 @@ h2{
 /* ------section1 block----- */
 .section1{
     background-color:   #E2CFA9; 
+    overflow: hidden;
 }
 .container{
     width: 100%;
     height: 100%;
     clear: both;
+
 }
 .container img{
     display: block;
