--- a/style/outpatient.css
+++ b/style/outpatient.css
@@ -22,6 +22,7 @@ h2{
 /* ------section1 block----- */
 .section1{
     background-color:   #E2CFA9; 
+    overflow: hidden;
 }
 .container{
     width: 100%;
@@ -61,7 +62,6 @@ h2{
 
 /* ------section3 block----- */
 .section3{
-    height: 2400px;
     background-image:linear-gradient(180deg,rgba(216, 219 ,208) 0%, rgba(107, 127 ,90) 100%);
 }
 /* <top> */
