--- a/style/outpatient.css
+++ b/style/outpatient.css
@@ -32,7 +32,9 @@ h2{
     display: block;
     width: 100%;
 }
-
+.section1 .slick-block{
+    cursor: pointer;
+}
 
 /* ------section2 block----- */
 .section2{
@@ -54,10 +56,17 @@ h2{
 .section2 img{
     width: 100%;
     display: block;
+    
 }
 
 .section2 .cover h1{
    margin-bottom: 10px;
+}
+@media (max-width:575px ){
+    .section2{
+        background-attachment: cover;
+        background-size: cover;
+    }
 }
 
 /* ------section3 block----- */
